<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inicio"
    android:fitsSystemWindows="true"
    tools:context=".Ambiente">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <android.support.v7.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/thumbnail"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_alignParentTop="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/a1" />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/thumbnail"
                        android:maxLines="3"
                        android:padding="8dp"
                        android:text="@string/consejo1"
                        android:textColor="#222"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title"
                        android:maxLines="10"
                        android:padding="5dp"
                        android:text="@string/texto1"
                        android:textColor="#666"
                        android:textSize="12sp" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/thumbnail2"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_alignParentTop="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/a2" />

                    <TextView
                        android:id="@+id/title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/thumbnail2"
                        android:maxLines="3"
                        android:padding="8dp"
                        android:text="@string/consejo2"
                        android:textColor="#222"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title2"
                        android:maxLines="10"
                        android:padding="5dp"
                        android:text="@string/texto2"
                        android:textColor="#666"
                        android:textSize="12sp" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/thumbnail3"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_alignParentTop="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/a3" />

                    <TextView
                        android:id="@+id/title3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/thumbnail3"
                        android:maxLines="3"
                        android:padding="8dp"
                        android:text="@string/consejo3"
                        android:textColor="#222"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title3"
                        android:maxLines="10"
                        android:padding="5dp"
                        android:text="@string/texto3"
                        android:textColor="#666"
                        android:textSize="12sp" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/thumbnail4"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/a4" />

                <TextView
                    android:id="@+id/title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/thumbnail4"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/consejo4"
                    android:textColor="#222"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title4"
                    android:maxLines="10"
                    android:padding="5dp"
                    android:text="@string/texto4"
                    android:textColor="#666"
                    android:textSize="12sp" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/thumbnail5"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_alignParentTop="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/a5" />

                    <TextView
                        android:id="@+id/title5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/thumbnail5"
                        android:maxLines="3"
                        android:padding="8dp"
                        android:text="@string/consejo5"
                        android:textColor="#222"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title5"
                        android:maxLines="10"
                        android:padding="5dp"
                        android:text="@string/texto5"
                        android:textColor="#666"
                        android:textSize="12sp" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/thumbnail6"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_alignParentTop="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/a6" />

                    <TextView
                        android:id="@+id/title6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/thumbnail6"
                        android:maxLines="3"
                        android:padding="8dp"
                        android:text="@string/consejo6"
                        android:textColor="#222"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title6"
                        android:maxLines="10"
                        android:padding="5dp"
                        android:text="@string/texto6"
                        android:textColor="#666"
                        android:textSize="12sp" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/thumbnail7"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_alignParentTop="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/a7" />

                    <TextView
                        android:id="@+id/title7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/thumbnail7"
                        android:maxLines="3"
                        android:padding="8dp"
                        android:text="@string/consejo7"
                        android:textColor="#222"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title7"
                        android:maxLines="10"
                        android:padding="5dp"
                        android:text="@string/texto7"
                        android:textColor="#666"
                        android:textSize="12sp" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/thumbnail8"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_alignParentTop="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/a8" />

                    <TextView
                        android:id="@+id/title8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/thumbnail8"
                        android:maxLines="3"
                        android:padding="8dp"
                        android:text="@string/consejo8"
                        android:textColor="#222"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title8"
                        android:maxLines="10"
                        android:padding="5dp"
                        android:text="@string/texto8"
                        android:textColor="#666"
                        android:textSize="12sp" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/thumbnail9"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_alignParentTop="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/a9" />

                    <TextView
                        android:id="@+id/title9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/thumbnail9"
                        android:maxLines="3"
                        android:padding="8dp"
                        android:text="@string/consejo9"
                        android:textColor="#222"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title9"
                        android:maxLines="10"
                        android:padding="5dp"
                        android:text="@string/texto9"
                        android:textColor="#666"
                        android:textSize="12sp" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="200dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/thumbnail10"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_alignParentTop="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/a10" />

                    <TextView
                        android:id="@+id/title10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/thumbnail10"
                        android:maxLines="3"
                        android:padding="8dp"
                        android:text="@string/consejo10"
                        android:textColor="#222"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title10"
                        android:maxLines="10"
                        android:padding="5dp"
                        android:text="@string/texto10"
                        android:textColor="#666"
                        android:textSize="12sp" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>