<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inicio2"
    tools:context=".Ambiente">


    <RelativeLayout
        android:id="@+id/lucha"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/animation_view"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ducha_press"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/ducha"
            android:textAllCaps="true"
            android:textColor="@color/blanco"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/ducha" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/consejos"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lucha"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ducha_press"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/consejos"
            android:textAllCaps="true"
            android:textColor="@color/blanco"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/record" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/recordatorios"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/consejos"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ducha_press"
        android:gravity="center"
        android:clickable="true"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/recorda"
            android:textAllCaps="true"
            android:textColor="@color/blanco"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/conse" />

    </RelativeLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="logo_intro.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true" />


</RelativeLayout>